extensions/PhabBugz/web/style/phabricator.css
/* This Source Code Form is subject to the terms of the Mozilla Public
 * License, v. 2.0. If a copy of the MPL was not distributed with this file,
 * You can obtain one at http://mozilla.org/MPL/2.0/.
 *
 * This Source Code Form is "Incompatible With Secondary Licenses", as
 * defined by the Mozilla Public License, v. 2.0. */

@font-face {
  font-family: FontAwesome-DifferentialStatus;
  font-style: normal;
  font-weight: normal;
  src: url(../fonts/FontAwesome-DifferentialStatus.woff2?v=4.7) format('woff2'),
    url(../fonts/FontAwesome-DifferentialStatus.woff?v=4.7) format('woff');
}

.phabricator-table {
  border: none;
  border-collapse: collapse;
  border-bottom: 1px solid var(--primary-region-border-color);
  background: var(--grid-background-color);
  box-shadow: 0 1px 1px var(--primary-region-box-shadow);
}

.phabricator-table th {
  padding: 4px;
  text-align: left;
}

.phabricator-table td {
  padding: 4px !important;
  vertical-align: middle !important;
}

.phabricator-table thead,
.phabricator-table tfoot {
  background-color: var(--grid-header-background-color);
}

.phabricator-revisions {
  border: none;
  border-collapse: collapse;
  width: 100%;
}

.phabricator-revisions tr:hover {
  background-color: var(--grid-background-hover-color);
}

.phabricator-revisions th {
  padding: 2px;
}

.phabricator-revisions td {
  padding: 2px;
  vertical-align: top;
}

.phabricator-revisions td.phabricator-title {
  width: 100%;
}

.phabricator-revisions .phabricator-reviewers td {
  padding: 1px;
}

span[class^="revision-status-box-"] {
  margin-bottom: 5px;
  border: none;
  border-radius: 3px;
  padding: 3px 9px;
  white-space: nowrap;
}

span[class^="revision-status-icon-"]::before,
span[class^="review-status-icon-"]::before {
  display: inline-block;
  margin: -2px 4px -2px 0;
  font-family: FontAwesome-DifferentialStatus;
  font-variant: normal;
  text-rendering: auto;
}

.revision-status-icon-needs-review::before {
  content: "\f121";
}

.revision-status-icon-needs-revision::before {
  content: "\f021";
}

.revision-status-icon-changes-planned::before {
  content: "\f025";
}

.revision-status-icon-accepted::before {
  content: "\f00C";
}

.revision-status-icon-published::before {
  content: "\f046";
}

.revision-status-icon-abandoned::before {
  content: "\f072";
}

.revision-status-icon-draft::before {
  content: "\f110";
}

.revision-status-box-needs-review {
  color: inherit;
  background: rgba(71, 87, 120, 0.1);
}

.revision-status-box-accepted {
  background: #ddefdd;
  color: #326d34;
}

.revision-status-box-changes-planned,
.revision-status-box-needs-revision {
  background: #f7e6e6;
  color: #a53737;
}

.revision-status-box-abandoned {
  background: #eae6f7;
  color: #6e5cb6;
}

.review-status-icon-accepted::before {
  color: green;
  content: "\f058";
}

.review-status-icon-accepted-prior::before {
  color: grey;
  content: "\f058";
}

.review-status-icon-added::before {
  color: grey;
  content: "\f10c";
}

.review-status-icon-blocking::before {
  color: red;
  content: "\f056";
}

.review-status-icon-rejected::before {
  color: red;
  content: "\f05c";
}

.review-status-icon-resigned::before {
  color: rgba(55, 55, 55, 0.3);
  content: "\f024";
}

/**
 * bug-modal specific
 */

#module-phabricator-revisions .module-content {
  padding: 0;
}

.bug_modal .phabricator-table {
  width: 100%;
}

.bug_modal .phabricator-revision td {
  padding: 8px;
  border-bottom: 1px solid var(--secondary-region-border-color);
  vertical-align: top;
}

.bug_modal .phabricator-revisions th {
  padding-left: 8px;
  text-align: left;
}

.bug_modal .phabricator-revision .phabricator-reviewers td {
  border: 0;
  padding: 1px;
}

